# bal_calc

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json
cli/: CMakeLists.txt  main.cpp
core/: CMakeLists.txt
core/include/ballistics/: version.h
core/src/: version.cpp
tests/: CMakeLists.txt  smoke_test.cpp
