include(FetchContent)
FetchContent_Declare(
    googletest
    URL https://github.com/google/googletest/archive/refs/tags/v1.14.0.tar.gz
    URL_HASH SHA256=8ad598c73ad796e0d8280b082cebd82a630d73e73cd3c70057938a6501bba5d7
    DOWNLOAD_EXTRACT_TIMESTAMP TRUE
)
set(gtest_force_shared_crt ON CACHE BOOL "" FORCE)  # for future MSVC builds
FetchContent_MakeAvailable(googletest)

add_executable(core_tests smoke_test.cpp)
target_link_libraries(core_tests PRIVATE
    ballistics_core
    GTest::gtest_main
    GTest::gmock
    ballistics_warnings
)
ballistics_enable_tidy(core_tests)

include(GoogleTest)
gtest_discover_tests(core_tests)
